syslog-ng (3.3.1-1~mhp4) unstable; urgency=low

  * Update to commit 4b43811 from upstream.
    + Drop the silent-load patch, rejected by upstream.

 --

syslog-ng (3.3.1-1~mhp3) unstable; urgency=low

  * Update to commit 0bae72c from upstream.
    + Apply the silent-load patch.

  * Build the arch:all package with gzip compression inside (as opposed to
    xz), so that it can be installed on systems that do not support
    data.tar.xz (such as Ubuntu Lucid).
  * The syslog-ng-mod-* packages now Replace/Conflict/Provide the old
    syslog-ng-module-* packages, instead of Replace/Breaking them
  * Add the SQL module to the default list.
  * Use the --silent-module-load option in the init script to silence
    warnings about modules not found.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sat, 15 Oct 2011 11:20:55 +0200

syslog-ng (3.3.1-1~mhp2) unstable; urgency=low

  * Rename module packages to syslog-ng-mod-*. The new modules conflict &
    break with the old ones, hopefully leading to a straight upgrade path.
  * Support 'status' in the init script.
    Patch from Peter Eisentraut <petere@debian.org> (Closes: #644458)
  * Build-Depend on libevtlog-dev (>= 0.2.12-5~) for correct shlibs.
  * Build-Depend on lsb-release, and use it to disable xz compression on
    Ubuntu Lucid.

 -- Gergely Nagy <algernon@madhouse-project.org>  Fri, 07 Oct 2011 12:00:37 +0200

syslog-ng (3.3.1-1~mhp1) unstable; urgency=low

  * New upstream, final version, from the 3.3.1 release tag (f6e075c).
  * Build-Depend on help2man, so that manual pages get built.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 02 Oct 2011 21:37:23 +0200

syslog-ng (3.3.0beta2-1~preview5) unstable; urgency=low

  * Update to commit e51862b from upstream.

 -- Gergely Nagy <algernon@madhouse-project.org>  Fri, 30 Sep 2011 10:40:27 +0200

syslog-ng (3.3.0beta2-1~preview4) unstable; urgency=low

  * Repackaged to be DFSG-free, by dropping the upstream man pages.
