@@ -15,6 +15,7 @@ Build-Depends: debhelper (>= 8),
 	       libwrap0-dev,
 	       libpcre3-dev,
 	       libcap-dev [linux-any],
+	       libsystemd-daemon-dev [linux-any],
 	       hardening-includes
 Standards-Version: 3.9.2
 Homepage: http://www.balabit.com/network-security/syslog-ng/opensource-logging-system
